@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2017 Howard Chu, Symas Corp.
+ * Copyright 2015-2018 Howard Chu, Symas Corp.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
